Add Solid Card to data + SEO

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@ const allCards = [
     { id: 175, name: 'Bit2Me', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/916eeb67-3870-4457-098f-ae0a89763700/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e4f675a5-f4b1-4172-ee40-d9026aef9500/public', xHandle: 'Bit2Me_Global', showFrontTags: true, bg: 'from-[#0046E1] to-[#0036b1]', network: 'Visa', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['europe'], cashback: 'Up to 9%', cashbackToken: 'B2M', fxFee: '0%', annualFee: 'TBD', features: ['Up to 9% cashback', 'Spanish exchange', 'B2M token rewards', 'Low ATM fees'], perks: ['Spain focused', 'High cashback', 'EU regulated'], token: { ticker: 'B2M', live: true, cmc: 'bit2me' }, website: 'https://bit2me.com', platforms: 'both' },
     { id: 177, name: 'Verse V-Card', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/12efc6f8-e958-4e13-d6dd-51be91457700/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/12efc6f8-e958-4e13-d6dd-51be91457700/public', xHandle: 'VerseEcosystem', showFrontTags: true, bg: 'from-[#0a1628] to-[#1a2d4a]', network: 'Mastercard', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'VERSE rewards', cashbackToken: 'VERSE', fxFee: '0%', annualFee: '€49.99', features: ['Self-custody wallet', 'VERSE token rewards', '37M+ merchants', 'Global ATM access'], perks: ['Bitcoin.com ecosystem', 'Non-custodial', 'VERSE burn rewards'], token: { ticker: 'VERSE', live: true, cmc: 'verse-bitcoin' }, website: 'https://verse.bitcoin.com/card/', platforms: 'both' },
   { id: 179, name: 'Kolo', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/eb87aa31-66b7-493f-3c12-c10563b52b00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/15f6a954-834a-4abb-42dd-b90876f66e00/public', xHandle: 'KoloHub', showFrontTags: true, bg: 'from-[#00D26A] to-[#00a854]', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Self-custody', 'Crypto spending', 'Multi-chain'], perks: ['Non-custodial', 'Web3 native'], website: 'https://kolo.com', platforms: 'both' },
+  { id: 1303, name: 'Solid Card', showBrandName: true, brandNameText: 'Solid', xHandle: 'SolidYield', showFrontTags: true, bg: 'from-[#00C853] to-[#009624]', network: 'Visa', category: 'onchain', archetype: 'defi', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: '3%', cashbackToken: 'Stablecoin', fxFee: '0%', annualFee: '$0', features: ['3% cashback', 'Up to 14% yield', 'Non-custodial Visa', 'Yield-bearing stablecoin vault', 'Self-custody'], perks: ['Earn while you spend', 'Stablecoin yield', 'No annual fee'], website: 'https://www.solid.xyz', platforms: 'both' },
   { id: 1302, name: 'BonkX', logo: 'https://bonkx.io/assets/images/logo.svg', brandLogo: 'https://bonkx.io/assets/images/logo.svg', showBrandName: true, brandNameText: 'BonkX', xHandle: 'BonkX_SOL', showFrontTags: true, bg: 'from-[#FF6B00] to-[#FF9500]', network: 'TBD', category: 'onchain', archetype: 'neobank', custody: 'TBD', chain: 'Solana', regions: ['global'], cashback: 'Stablecoin cashback', cashbackToken: 'BONK', fxFee: 'TBD', annualFee: 'TBD', features: ['Solana neobank', 'BONK powered', 'IBANs', 'Cards', 'Payroll', 'Stablecoin cashback'], perks: ['Massive BONK community', 'Early access perks', 'Premium card tiers'], token: { ticker: 'BONK', live: true, cmc: 'bonk' }, website: 'https://bonkx.io', comingSoon: true, waitlistUrl: 'https://bonkx.io', platforms: 'both' },
 
   // ============================================
@@ -3975,6 +3976,18 @@ BitPay is best for users who want a simple, established solution without bells a
       { q: "What makes Kolo community-first?", a: "Kolo emphasizes community governance and shared ownership in decision-making." }
     ]
   },
+  'Solid Card': {
+    seoTitle: "Solid Card Review 2026: 3% Cashback + 14% Yield Non-Custodial Visa | Spendbase",
+    metaDescription: "Solid Card offers 3% cashback and up to 14% yield on a non-custodial Visa. Earn while you spend with a yield-bearing stablecoin vault.",
+    overview: `Solid Card combines everyday spending with DeFi yield. Get 3% cashback on purchases while your balance earns up to 14% APY in a yield-bearing stablecoin vault. It's a non-custodial Visa card, meaning you maintain full control of your funds. No annual fee, no hidden costs — your money just grows in the background while you spend.`,
+    pros: ["3% cashback on all purchases", "Up to 14% yield on balance", "Non-custodial (self-custody)", "No annual fee", "Visa accepted globally"],
+    cons: ["Newer project", "Yield rates may vary", "Limited track record", "DeFi smart contract risk"],
+    faq: [
+      { q: "What is Solid Card?", a: "Solid Card is a non-custodial Visa debit card that gives 3% cashback and earns up to 14% yield on your balance through a stablecoin vault." },
+      { q: "How does the yield work?", a: "Your card balance sits in a yield-bearing stablecoin vault that generates up to 14% APY. You earn passively while spending normally." },
+      { q: "Is Solid Card self-custody?", a: "Yes, Solid Card is non-custodial. You maintain full control of your funds at all times." }
+    ]
+  },
   'BonkX': {
     seoTitle: "BonkX Card Review 2026: Solana Neobank Powered by BONK | Spendbase",
     metaDescription: "BonkX is a next-gen neobank on Solana with cards, IBANs, payroll & stablecoin cashback. Join the waitlist →",
@@ -4440,6 +4453,7 @@ const cardRatingsData = {
   'Holyheld': { ios: null, android: null, trustpilot: null, cryptonoshi: 6, composite: 4.4, reviews: 1500 },
   'KAST': { ios: null, android: null, trustpilot: null, cryptonoshi: 8, composite: 4.3, reviews: 2000 },
   'Kolo': { ios: null, android: null, trustpilot: null, cryptonoshi: 11, composite: 4.2, reviews: 1000 },
+  'Solid Card': { ios: null, android: null, trustpilot: null, cryptonoshi: null, composite: 4.3, reviews: 0 },
   'BonkX': { ios: null, android: null, trustpilot: null, cryptonoshi: null, composite: 4.0, reviews: 0 },
   'Bitpanda': { ios: 4.4, android: 4.4, trustpilot: 3.9, cryptonoshi: null, composite: 4.2, reviews: 25000 }, // Trustpilot 3.9 (Great)
   'OKX Card': { ios: 4.6, android: 4.5, trustpilot: 1.9, cryptonoshi: null, composite: 3.7, reviews: 80000 }, // Trustpilot 1.9 (Poor)
