Fix Solid Card missing logo

--- a/card/solid-card/index.html
+++ b/card/solid-card/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://spendbase.cards/card/solid-card/">
   <meta property="og:title" content="Solid Card Crypto Card Review | 3% Cashback">
   <meta property="og:description" content="Solid Card is a onchain crypto card offering 3% cashback in Stablecoin. Self-custody solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="undefined">
+  <meta property="og:image" content="https://cdn.prod.website-files.com/68380f669498be506ce62c45/696666e9db2b00198db7d4ff_webclip.png">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
@@ -26,7 +26,7 @@
   <meta name="twitter:url" content="https://spendbase.cards/card/solid-card/">
   <meta name="twitter:title" content="Solid Card Crypto Card Review | 3% Cashback">
   <meta name="twitter:description" content="Solid Card is a onchain crypto card offering 3% cashback in Stablecoin. Self-custody solution on Multi-chain with 0% FX fees.">
-  <meta name="twitter:image" content="undefined">
+  <meta name="twitter:image" content="https://cdn.prod.website-files.com/68380f669498be506ce62c45/696666e9db2b00198db7d4ff_webclip.png">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -37,6 +37,7 @@
   "@type": "Product",
   "name": "Solid Card Crypto Card",
   "description": "Solid Card is a onchain crypto card offering 3% cashback in Stablecoin. Self-custody solution on Multi-chain with 0% FX fees.",
+  "image": "https://cdn.prod.website-files.com/68380f669498be506ce62c45/696666e9db2b00198db7d4ff_webclip.png",
   "brand": {
     "@type": "Brand",
     "name": "Solid Card"
@@ -189,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="undefined" alt="Solid Card" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://cdn.prod.website-files.com/68380f669498be506ce62c45/696666e9db2b00198db7d4ff_webclip.png" alt="Solid Card" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Solid Card</h1>
               <div class="flex items-center space-x-3 mt-2">
