--- a/card/binance-card/index.html
+++ b/card/binance-card/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/binance-card/">
   <meta property="og:title" content="Binance Card Crypto Card Review | Up to 8% Cashback">
   <meta property="og:description" content="Binance Card is a crypto-native crypto card offering Up to 8% cashback in BNB. Custodial solution on BNB Chain with 0.9% FX fees.">
-  
+  <meta property="og:image" content="https://cdn.brandfetch.io/idXI-zkGu8/w/334/h/334/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1760641089923">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/binance-card/">
   <meta name="twitter:title" content="Binance Card Crypto Card Review | Up to 8% Cashback">
   <meta name="twitter:description" content="Binance Card is a crypto-native crypto card offering Up to 8% cashback in BNB. Custodial solution on BNB Chain with 0.9% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/binance-card.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/binance-card.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://cdn.brandfetch.io/idXI-zkGu8/w/334/h/334/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1760641089923">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://cdn.brandfetch.io/idXI-zkGu8/w/334/h/334/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1760641089923" alt="Binance Card" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://cdn.brandfetch.io/idXI-zkGu8/w/334/h/334/theme/dark/icon.jpeg?c=1bxid64Mup7aczewSAYMX&t=1760641089923" alt="Binance Card" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Binance Card</h1>
               <div class="flex items-center space-x-3 mt-2">
