Fix squished logos - add object-contain

--- a/card/bitget-premier/index.html
+++ b/card/bitget-premier/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/bitget-premier/">
   <meta property="og:title" content="Bitget Premier Crypto Card Review | Up to 8% Cashback">
   <meta property="og:description" content="Bitget Premier is a exchange crypto card offering Up to 8% cashback in BGB. Custodial solution on Multi-chain with 0% FX fees.">
-  
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/bitget-premier/">
   <meta name="twitter:title" content="Bitget Premier Crypto Card Review | Up to 8% Cashback">
   <meta name="twitter:description" content="Bitget Premier is a exchange crypto card offering Up to 8% cashback in BGB. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/bitget-premier.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/bitget-premier.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public" alt="Bitget Premier" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public" alt="Bitget Premier" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Bitget Premier</h1>
               <div class="flex items-center space-x-3 mt-2">
