--- a/card/cash-app/index.html
+++ b/card/cash-app/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/cash-app/">
   <meta property="og:title" content="Cash App Crypto Card Review | Boosts Cashback">
   <meta property="og:description" content="Cash App is a neobank crypto card offering Boosts cashback in USD. Custodial solution on Bitcoin with 3% FX fees.">
-  
+  <meta property="og:image" content="https://static.afterpaycdn.com/en-US/integration/logo/lockup/cashapppay-mono-white-32.svg">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/cash-app/">
   <meta name="twitter:title" content="Cash App Crypto Card Review | Boosts Cashback">
   <meta name="twitter:description" content="Cash App is a neobank crypto card offering Boosts cashback in USD. Custodial solution on Bitcoin with 3% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/cash-app.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/cash-app.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://static.afterpaycdn.com/en-US/integration/logo/lockup/cashapppay-mono-white-32.svg">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://static.afterpaycdn.com/en-US/integration/logo/lockup/cashapppay-mono-white-32.svg" alt="Cash App" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://static.afterpaycdn.com/en-US/integration/logo/lockup/cashapppay-mono-white-32.svg" alt="Cash App" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Cash App</h1>
               <div class="flex items-center space-x-3 mt-2">
