--- a/card/coinbase/index.html
+++ b/card/coinbase/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/coinbase/">
   <meta property="og:title" content="Coinbase Crypto Card Review | 1-4% Cashback">
   <meta property="og:description" content="Coinbase is a crypto-native crypto card offering 1-4% cashback in BTC/ETH/DOGE. Custodial solution on Base with 2.49% FX fees.">
-  
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6b89dd70-b6a8-42d7-a3d2-1f0946412000/public">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/coinbase/">
   <meta name="twitter:title" content="Coinbase Crypto Card Review | 1-4% Cashback">
   <meta name="twitter:description" content="Coinbase is a crypto-native crypto card offering 1-4% cashback in BTC/ETH/DOGE. Custodial solution on Base with 2.49% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/coinbase.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/coinbase.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6b89dd70-b6a8-42d7-a3d2-1f0946412000/public">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6b89dd70-b6a8-42d7-a3d2-1f0946412000/public" alt="Coinbase" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6b89dd70-b6a8-42d7-a3d2-1f0946412000/public" alt="Coinbase" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Coinbase</h1>
               <div class="flex items-center space-x-3 mt-2">
