--- a/card/cryptocom/index.html
+++ b/card/cryptocom/index.html
@@ -190,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/5d211cf2-dce0-4d18-7530-4138739a5a00/public" alt="Crypto.com" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/5d211cf2-dce0-4d18-7530-4138739a5a00/public" alt="Crypto.com" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Crypto.com</h1>
               <div class="flex items-center space-x-3 mt-2">
