--- a/card/etherfi-cash/index.html
+++ b/card/etherfi-cash/index.html
@@ -190,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e36eebc2-d301-41ca-1caa-1bd95ec9b200/public" alt="Ether.fi Cash" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e36eebc2-d301-41ca-1caa-1bd95ec9b200/public" alt="Ether.fi Cash" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Ether.fi Cash</h1>
               <div class="flex items-center space-x-3 mt-2">
