Fix squished logos - add object-contain

--- a/card/exodus-pay/index.html
+++ b/card/exodus-pay/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/exodus-pay/">
   <meta property="og:title" content="Exodus Pay Crypto Card Review | TBD Cashback">
   <meta property="og:description" content="Exodus Pay is a onchain crypto card offering TBD cashback in USD. Self-custody solution on Multi-chain with TBD FX fees.">
-  
+  <meta property="og:image" content="https://logo.clearbit.com/exodus.com">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/exodus-pay/">
   <meta name="twitter:title" content="Exodus Pay Crypto Card Review | TBD Cashback">
   <meta name="twitter:description" content="Exodus Pay is a onchain crypto card offering TBD cashback in USD. Self-custody solution on Multi-chain with TBD FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/exodus-pay.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/exodus-pay.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://logo.clearbit.com/exodus.com">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://logo.clearbit.com/exodus.com" alt="Exodus Pay" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://logo.clearbit.com/exodus.com" alt="Exodus Pay" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Exodus Pay</h1>
               <div class="flex items-center space-x-3 mt-2">
