--- a/card/fold/index.html
+++ b/card/fold/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/fold/">
   <meta property="og:title" content="Fold Crypto Card Review | Up to 15% Cashback">
   <meta property="og:description" content="Fold is a crypto-native crypto card offering Up to 15% cashback in BTC/Sats. Custodial solution on Bitcoin with 0% FX fees.">
-  
+  <meta property="og:image" content="https://cdn.brandfetch.io/id8zpwD0TT/w/230/h/82/theme/light/logo.png?c=1bxid64Mup7aczewSAYMX&t=1699911047235">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/fold/">
   <meta name="twitter:title" content="Fold Crypto Card Review | Up to 15% Cashback">
   <meta name="twitter:description" content="Fold is a crypto-native crypto card offering Up to 15% cashback in BTC/Sats. Custodial solution on Bitcoin with 0% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/fold.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/fold.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://cdn.brandfetch.io/id8zpwD0TT/w/230/h/82/theme/light/logo.png?c=1bxid64Mup7aczewSAYMX&t=1699911047235">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://cdn.brandfetch.io/id8zpwD0TT/w/230/h/82/theme/light/logo.png?c=1bxid64Mup7aczewSAYMX&t=1699911047235" alt="Fold" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://cdn.brandfetch.io/id8zpwD0TT/w/230/h/82/theme/light/logo.png?c=1bxid64Mup7aczewSAYMX&t=1699911047235" alt="Fold" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Fold</h1>
               <div class="flex items-center space-x-3 mt-2">
