Fix squished logos

--- a/card/gemini/index.html
+++ b/card/gemini/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/gemini/">
   <meta property="og:title" content="Gemini Crypto Card Review | 3% Cashback">
   <meta property="og:description" content="Gemini is a exchange crypto card offering 3% cashback in Crypto. Custodial solution on Multi-chain with 0% FX fees.">
-  
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/c89c9459-b0fb-47ad-5002-0545f9065d00/public">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/gemini/">
   <meta name="twitter:title" content="Gemini Crypto Card Review | 3% Cashback">
   <meta name="twitter:description" content="Gemini is a exchange crypto card offering 3% cashback in Crypto. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/gemini.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/gemini.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/c89c9459-b0fb-47ad-5002-0545f9065d00/public">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/c89c9459-b0fb-47ad-5002-0545f9065d00/public" alt="Gemini" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/c89c9459-b0fb-47ad-5002-0545f9065d00/public" alt="Gemini" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Gemini</h1>
               <div class="flex items-center space-x-3 mt-2">
