Fix squished card logos - add object-contain to all card detail pages

--- a/card/holyheld/index.html
+++ b/card/holyheld/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/holyheld/">
   <meta property="og:title" content="Holyheld Crypto Card Review | 0.5-1% Cashback">
   <meta property="og:description" content="Holyheld is a onchain crypto card offering 0.5-1% cashback in USDC. Self-custody solution on 14 chains with 2.5% FX fees.">
-  
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/13fd0abc-e740-41a2-c8df-ab65c668a100/public">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/holyheld/">
   <meta name="twitter:title" content="Holyheld Crypto Card Review | 0.5-1% Cashback">
   <meta name="twitter:description" content="Holyheld is a onchain crypto card offering 0.5-1% cashback in USDC. Self-custody solution on 14 chains with 2.5% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/holyheld.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/holyheld.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/13fd0abc-e740-41a2-c8df-ab65c668a100/public">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/13fd0abc-e740-41a2-c8df-ab65c668a100/public" alt="Holyheld" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/13fd0abc-e740-41a2-c8df-ab65c668a100/public" alt="Holyheld" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Holyheld</h1>
               <div class="flex items-center space-x-3 mt-2">
