--- a/card/nubank/index.html
+++ b/card/nubank/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/nubank/">
   <meta property="og:title" content="Nubank Crypto Card Review | 4% APY Cashback">
   <meta property="og:description" content="Nubank is a neobank crypto card offering 4% APY cashback in USDC. Custodial solution on N/A with Varies FX fees.">
-  
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/3ed27f45-12cf-401e-96a9-ecc81f7d4e00/public">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/nubank/">
   <meta name="twitter:title" content="Nubank Crypto Card Review | 4% APY Cashback">
   <meta name="twitter:description" content="Nubank is a neobank crypto card offering 4% APY cashback in USDC. Custodial solution on N/A with Varies FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/nubank.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/nubank.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/3ed27f45-12cf-401e-96a9-ecc81f7d4e00/public">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/3ed27f45-12cf-401e-96a9-ecc81f7d4e00/public" alt="Nubank" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/3ed27f45-12cf-401e-96a9-ecc81f7d4e00/public" alt="Nubank" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Nubank</h1>
               <div class="flex items-center space-x-3 mt-2">
