--- a/card/revolut/index.html
+++ b/card/revolut/index.html
@@ -17,19 +17,16 @@
   <meta property="og:url" content="https://spendbase.cards/card/revolut/">
   <meta property="og:title" content="Revolut Crypto Card Review | 1% Cashback">
   <meta property="og:description" content="Revolut is a neobank crypto card offering 1% cashback in RevPoints. Custodial solution on Multi-chain with 0% FX fees.">
-  
+  <meta property="og:image" content="https://cdn.brandfetch.io/id7X7F9tik/w/400/h/400/theme/dark/icon.png?c=1bfwsmEH20zzEfSNTed">
   <meta property="og:site_name" content="Spendbase">
   
   <!-- Twitter -->
-  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@spendbasecards">
   <meta name="twitter:url" content="https://spendbase.cards/card/revolut/">
   <meta name="twitter:title" content="Revolut Crypto Card Review | 1% Cashback">
   <meta name="twitter:description" content="Revolut is a neobank crypto card offering 1% cashback in RevPoints. Custodial solution on Multi-chain with 0% FX fees.">
-  <meta property="og:image" content="https://spendbase.cards/og/card/revolut.png">
-  <meta name="twitter:image" content="https://spendbase.cards/og/card/revolut.png">
-  <meta name="twitter:card" content="summary_large_image">
-  
+  <meta name="twitter:image" content="https://cdn.brandfetch.io/id7X7F9tik/w/400/h/400/theme/dark/icon.png?c=1bfwsmEH20zzEfSNTed">
   
   <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   
@@ -193,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://cdn.brandfetch.io/id7X7F9tik/w/400/h/400/theme/dark/icon.png?c=1bfwsmEH20zzEfSNTed" alt="Revolut" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://cdn.brandfetch.io/id7X7F9tik/w/400/h/400/theme/dark/icon.png?c=1bfwsmEH20zzEfSNTed" alt="Revolut" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Revolut</h1>
               <div class="flex items-center space-x-3 mt-2">
