--- a/card/solid-card/index.html
+++ b/card/solid-card/index.html
@@ -190,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://cdn.prod.website-files.com/68380f669498be506ce62c45/696666e9db2b00198db7d4ff_webclip.png" alt="Solid Card" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://cdn.prod.website-files.com/68380f669498be506ce62c45/696666e9db2b00198db7d4ff_webclip.png" alt="Solid Card" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Solid Card</h1>
               <div class="flex items-center space-x-3 mt-2">
