--- a/card/swypefun/index.html
+++ b/card/swypefun/index.html
@@ -190,7 +190,7 @@
       <header class="mb-8">
         <div class="flex flex-col md:flex-row items-start md:items-center gap-6 mb-6">
           <div class="flex items-center space-x-4">
-            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/d2d9b9dc-24f4-45da-1c07-f36b709c5a00/public" alt="Swype.fun" class="w-16 h-16 md:w-20 md:h-20 rounded-lg">
+            <img src="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/d2d9b9dc-24f4-45da-1c07-f36b709c5a00/public" alt="Swype.fun" class="w-16 h-16 md:w-20 md:h-20 rounded-lg object-contain">
             <div>
               <h1 class="text-3xl md:text-4xl font-bold">Swype.fun</h1>
               <div class="flex items-center space-x-3 mt-2">
